syntax = "proto3";

package user.v1;

option go_package = "/gen/go/user;user";

// The user service definition.
service UserService {
  // Create a new user.
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

  // Get a user by ID.
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

// Request message for creating a user.
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

// Response message for creating a user.
message CreateUserResponse {
  message Data {
    string id = 1;
  }
  string code = 1;
  string message = 2;
  optional Data data = 3;
}

// Request message for getting a user.
message GetUserRequest {
  string id = 1;
}

// Response message for getting a user.
message GetUserResponse {
  message Data {
    string id = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
  }
  string code = 1;
  string message = 2;
  optional Data data = 3;
}
